fix: menu overlap

--- a/04-fe-expert/restaurant-apps/src/styles/index.scss
+++ b/04-fe-expert/restaurant-apps/src/styles/index.scss
@@ -155,11 +155,9 @@ body {
 	&__text {
 		width: 100%;
 		text-align: center;
-		position: absolute;
 		margin: 0 auto;
-		padding: 0 2rem;
+		padding: 25vh 0 2rem;
 		color: white;
-		top: 30%;
 
 		h2 {
 			font-size: 2.5rem;
